--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   sign_in_with_apple: ^3.2.0
   http: ^0.13.4
   platform: ^3.0.2
+  image_picker: ^0.8.4+4
+  firebase_storage: ^10.0.6
+  firebase_storage_web: ^3.0.4
 
 dev_dependencies:
   flutter_test:
