--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   image_picker: ^0.8.4+4
   firebase_storage: ^10.0.6
   firebase_storage_web: ^3.0.4
+  native_pdf_view: ^5.0.0
+  pdf: ^3.6.3
 
 dev_dependencies:
   flutter_test:
